--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "repo-checker"
 version = "0.1.0"
-description = "Add your description here"
+description = "repo-checker"
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
